<resources>
    <string name="app_name">Inventory App</string>
    <string name="product_name">Product Name</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="supplier_phone_number">Supplier Phone Number</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Products</string>
    <string name="editor_activity">Editor Activity</string>
    <string name="currency">₹</string>

    <string name="deleted_all_products_message">rows deleted from product table</string>
    <string name="price_label">Price</string>
    <string name="stock_level_label">Stock Level</string>

    <!-- Title for the activity to add a new product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_product">Add a Product</string>

    <!-- Title for the activity to edit an existing product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_product">Edit Product</string>


    <!-- Subtitle text for the empty view that prompts the user to add a product [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a new product</string>

    <!--
        *
        * NOTIFICATION TOAST MESSAGES
        *
        *-->

    <!-- Toast message in editor when new product has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_successful">Product saved</string>

    <!-- Toast message in editor when current product was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_product_successful">Product updated</string>

    <!-- Toast message in editor when current product was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_successful">Product deleted</string>

    <!-- Toast message in catalog when a unit sale of given product has successfully been sold [CHAR LIMIT=NONE] -->
    <string name="catalog_sell_product_item_successful">One unit has been sold</string>

    <!-- Toast message in catalog when all products were successfully deleted [CHAR LIMIT=NONE] -->
    <string name="catalog_delete_all_products_successful">All products deleted</string>

    <!-- Toast message in catalog when users tries to delete all products from an empty products table [CHAR LIMIT=NONE] -->
    <string name="catalog_products_table_is_empty">The products database is empty !</string>


    <!--
    *
    * DIALOG MESSAGES
    *
    *-->

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current product [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Dialog message to ask the user to confirm deleting the current product [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this product?</string>

    <!-- Dialog message to ask the user to confirm deleting all products [CHAR LIMIT=NONE] -->
    <string name="delete_all_products_dialog_msg">Delete all products?</string>

    <!-- Dialog button text for the option to confirm deleting the current product [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current product [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>


    <!-- Toast message in editor when attempt to save a product without a name [CHAR LIMIT=NONE] -->
    <string name="editor_product_requires_name">Product requires a name !</string>

    <!-- Toast message in editor when attempt to save a product without a supplier name [CHAR LIMIT=NONE] -->
    <string name="editor_product_requires_supplier_name">Product requires a supplier name !</string>

    <!-- Toast message in editor when attempt to save a product without a supplier email address [CHAR LIMIT=NONE] -->
    <string name="editor_product_requires_supplier_phone_number">Product requires a supplier\'s phone number !</string>

    <!-- Toast message in editor when attempt to save a product with an invalid supplier email address [CHAR LIMIT=NONE] -->
    <string name="editor_product_invalid_supplier_phone_number">The supplier\'s phone number is not valid !</string>

    <!-- Toast message in editor when attempt to save a product without a unit price [CHAR LIMIT=NONE] -->
    <string name="editor_product_requires_price">Product requires a price !</string>

    <!-- Toast message in editor when attempt to save a product without a supplier email address [CHAR LIMIT=NONE] -->
    <string name="editor_product_requires_positive_price">Product requires a positive price !</string>

    <!-- Toast message in editor when attempt to save a product with an empty stock level [CHAR LIMIT=NONE] -->
    <string name="editor_product_requires_positive_stock_level">Product requires a positive stock level !</string>

    <!-- Toast message in editor when new product has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_failed">Error with saving product</string>

    <!-- Toast message in editor when current product has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_product_failed">Error with updating product</string>

    <!-- Toast message in catalog when unit sell of a product has failed [CHAR LIMIT=NONE] -->
    <string name="catalog_sell_product_item_failed">Error with selling product\'s item</string>

    <!-- Toast message in catalog when unit sell of a product has failed because stock is null [CHAR LIMIT=NONE] -->
    <string name="catalog_sell_product_item_failed_stock_empty">Stock for this product is empty !</string>

    <!-- Toast message in editor when current product has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_failed">Error with deleting product</string>

    <!-- Toast message in editor when attempt to delete all product from database has failed [CHAR LIMIT=NONE] -->
    <string name="catalog_delete_all_products_failed">Error with deleting the products</string>
    <string name="product_details">Product Details</string>

    <!-- activity_view -->
    <string name="quantity_change_msg">Quantity updated and saved</string>
    <string name="quantity_finish_msg">Product is out of stock, buy another Product</string>
    <string name="detail_activity">Details Activity</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="phone_image">phone image</string>
    <string name="empty_view_image">empty view image</string>

</resources>
