<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <LinearLayout style="@style/LinearLayoutStyle">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/product_name" />

        <RelativeLayout style="@style/RelativeLayoutStyle">

            <EditText
                android:id="@+id/product_name_edit_text"
                style="@style/EditorFieldStyle"
                android:inputType="textCapWords"
                tools:text="@tools:sample/cities" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout style="@style/LinearLayoutStyle">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/price" />

        <RelativeLayout style="@style/RelativeLayoutStyle">

            <EditText
                android:id="@+id/product_price_edit_text"
                style="@style/EditorFieldStyle"
                android:inputType="number"
                tools:text="@tools:sample/us_zipcodes" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout style="@style/LinearLayoutStyle">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/quantity" />

        <RelativeLayout style="@style/RelativeLayoutStyle">

            <EditText
                android:id="@+id/product_quantity_edit_text"
                style="@style/EditorFieldStyle"
                android:inputType="number"
                tools:text="@tools:sample/us_zipcodes" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout style="@style/LinearLayoutStyle">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/supplier_name" />

        <RelativeLayout style="@style/RelativeLayoutStyle">

            <EditText
                android:id="@+id/product_supplier_name"
                style="@style/EditorFieldStyle"
                android:inputType="textCapWords"
                tools:text="@tools:sample/cities" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout style="@style/LinearLayoutStyle">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/supplier_phone_number" />

        <RelativeLayout style="@style/RelativeLayoutStyle">

            <EditText
                android:id="@+id/product_supplier_phone_number_edit_text"
                style="@style/EditorFieldStyle"
                android:inputType="phone"
                tools:text="@tools:sample/us_phones" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
